--- a/TeamProject/TeamProject.vbproj
+++ b/TeamProject/TeamProject.vbproj
@@ -137,5 +137,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="testing.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
